--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.13.1"
   }
 }
