--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript-eslint": "^8.28.0"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
