--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "typescript-eslint": "^8.28.0"
   },
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2"
   }
 }
