--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^5.0.1",
     "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.14",
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
@@ -50,7 +51,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "winston": "^3.17.0"
   }
 }
